Change the class name from ParsingPatterns to HttpPatterns. Adjust variable names. Exclude the message that the host cannot be read from the current path. Immutable Map return mechanism changed. Inline default variables of ServerConfiguration. Make variables of ServerConfiguration final